--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
             </div>
         </div>
     </section>
+    <div id="modal" class="modal">
+        <div class="modal-content">
+          <span class="close-button">&times;</span>
+          <h3 id="modal-title">Title Here</h3>
+          <p id="modal-description">More details will go here...</p>
+        </div>
+      </div>
 
     <footer>
         <div class="footer-left">
@@ -77,5 +84,6 @@
         <p>Est. 2025</p>
     </footer>
 
+<script src="./js/modal.js"></script>
 </body>
 </html>
