Added more styling and began layout for projects page

--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eva Frankovic</title>
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
     <section class="section-header">
         <header>
-            <h1 class="title"> Eva Frankovic</h1>
+            <h1 class="title"><a href="./index.html">Eva Frankovic</a></h1>
             <nav>
                 <ul class="nav-elements">
-                    <li><a href="#about"> About </a></li>
-                    <li><a href="#work"> Work </a></li>
-                    <li><a href="#contact"> Contact </a></li>
+                    <li><a href="./about.html"> About </a></li>
+                    <li><a href="./projects.html"> Projects </a></li>
+                    <li><a href="./contact.html"> Contact </a></li>
                 </ul>    
             </nav>
         </header>
@@ -57,7 +56,7 @@
                <div class="update2">
                 <img src="https://via.placeholder.com/24" class="modal-trigger" alt="Kenvue">
                 <h4> Kenvue </h4>
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente architecto commodi molestiae eaque, a voluptas nam quos cum et atque praesentium ipsa rerum dignissimos minus id nostrum, veniam delectus accusamus!</p>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente architecto commodi molestiae eaque, a voluptas nam quos cum et atque praesentium ipsa rerum dignissimos minus id nostrum, veniam delectus accusamus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, deserunt mollitia possimus quaerat doloribus facilis qui veniam asperiores consequatur sequi id tenetur officia magni dicta placeat voluptas aperiam architecto harum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur eius corrupti, facere molestias saepe iure ad officia libero consequatur officiis repudiandae veniam, ut modi sed harum, nesciunt ipsa quos similique.</p>
                </div>
             
                <div class="update3">
