--- a/about.html
+++ b/about.html
@@ -8,21 +8,35 @@
 
 </head>
 <body>
-    <section class="section-header">
+    <section class="section-header-v2">
         <header>
-            <h1 class="title"> Eva Frankovic</h1>
+            <h1 class="title-v2"> Eva Frankovic</h1>
             <nav>
-                <ul class="nav-elements">
+                <ul class="nav-elements-v2">
                     <li><a href="./about.html"> About </a></li>
                     <li><a href="./projects.html"> Projects </a></li>
                     <li><a href="./contact.html"> Contact </a></li>
                 </ul>    
             </nav>
         </header>
-
-        <div class="hero-content">
-            <h2> Projects</h2>
-        </div>
     </section>
+
+    <section class="about">
+        <h1 class="about-intro"> About</h1>
+        <h4 class="about-subtitle"> Hello, my name is Eva.</h4>
+        <p> I am a recent 2024 graduate from Bucknell University with a degree in Computer Science. While at Bucknell, I competed on the university’s Division I varsity women’s soccer team! Before Bucknell, I studied Information Science at the University of Pittsburgh, my hometown school. While studying at Pitt and playing for the school’s soccer team, I made the decision to transfer to Bucknell in order to make a greater impact. </p>
+        <p> I am currently working as a Data Analyst at Kenvue, where I’ve rediscovered my passion for web design and development. I’m now seeking a career in web development to continue pursuing this passion and grow as a developer. Having taken several web design and development classes in college, I’m now diving deeper by completing additional courses through Codecademy and Coursera. </p>
+        <p>I hope you enjoyed exploring my portfolio! Please feel free to reach out if you’d like a copy of my resume. </p>
+        <button> <a href="./contact.html"> </a> Contact Me </button>
+    </section>
+
+    <section class="me">
+        <img src="./images/eva-photo.jpg" alt="Photo of Eva Frankovic">
+    </section>
+
+    <section class="skills">
+
+    </section>
+
 </body>
 </html>
