Adding contact html as well as html footer for about page

--- a/about.html
+++ b/about.html
@@ -37,6 +37,15 @@
     <section class="skills">
 
     </section>
+    
+    <footer>
+        <div class="footer-left">
+            <h4>Eva Frankovic</h4>
+            <img src="image" alt="Instagram">
+            <img src="image" alt="LinkedIn">
+        </div>
+        <p>Est. 2025</p>
+    </footer>
 
 </body>
 </html>
