Heavy About Page CSS

--- a/about.html
+++ b/about.html
@@ -8,9 +8,10 @@
 
 </head>
 <body>
+    <main>
     <section class="section-header-v2">
         <header>
-            <h1 class="title-v2"> Eva Frankovic</h1>
+            <h1 class="title-v2"><a href="./index.html">Eva Frankovic</a></h1>
             <nav>
                 <ul class="nav-elements-v2">
                     <li><a href="./about.html"> About </a></li>
@@ -37,6 +38,7 @@
     <section class="skills">
 
     </section>
+    </main>
     
     <footer>
         <div class="footer-left">
