--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eva Frankovic</title>
     <link rel="stylesheet" href="./css/style.css">
+    <style>
+        .form-row {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 20px;
+        }
 
+        .half-width {
+            flex: 1;
+        }
+
+        .contact-form label {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        .contact-form input,
+        .contact-form textarea {
+            width: 100%;
+            padding: 8px;
+            box-sizing: border-box;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
+    <main>
     <section class="section-header-v2">
         <header>
-            <h1 class="title-v2"> Eva Frankovic</h1>
+            <h1 class="title-v2"><a href="./index.html">Eva Frankovic</a></h1>
             <nav>
                 <ul class="nav-elements-v2">
                     <li><a href="./about.html"> About </a></li>
@@ -21,22 +45,28 @@
         </header>
     </section>
 
+    <section>
+        <h1 class="page-title"> Contact Me</h1>
+    </section>
+
     
     <section class="contact-me-teaser">
         <div>
-            <h2> Let's work together </h2>
-            <h3> Please fill out the form below, and I will get back to you shortly.</h3>
+            <h2 class="contact-me-message">Let's work <span class="diff-font">together</span></h2>
+            <h3 class="contact-me-submes"> Please fill out the form below, and I will get back to you shortly.</h3>
         </div>
     </section>
 
     <section class="contact-form-section">
-        <h2>Contact Me</h2>
         <form action="#" method="post" class="contact-form">
-            <label for="first-name">First Name:</label>
-            <input type="text" id="first-name" name="first-name" required>
-
-            <label for="last-name">Last Name:</label>
-            <input type="text" id="last-name" name="last-name" required>
+            <div class="form-group">
+                <label for="first-name">First Name:</label>
+                <input type="text" id="first-name" name="first-name" required>
+            </div>
+            <div class="form-group">
+                <label for="last-name">Last Name:</label>
+                <input type="text" id="last-name" name="last-name" required>
+            </div>
 
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
@@ -44,10 +74,12 @@
             <label for="message">Message:</label>
             <textarea id="message" name="message" rows="5" required></textarea>
 
-            <button type="submit"> Submit </button>
+            <div class="form-group">
+              <button class="contact-submit" type="submit">Submit</button>
+            </div>
         </form>
     </section>
-
+</main>
     <footer>
         <div class="footer-left">
             <h4>Eva Frankovic</h4>
