--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 </head>
 <body>
+    <main>
     <section class="section-header">
         <header>
             <h1 class="title"><a href="./index.html">Eva Frankovic</a></h1>
@@ -74,6 +75,7 @@
           <p id="modal-description"></p> <!-- Added ID for modal description -->
         </div>
       </div>
+    </main>
 
     <footer>
         <div class="footer-left">
