final old portfolio design, starting revamp in different location

--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,7 @@
 
 </head>
 <body>
+    <main>
     <section class="section-header projects">
         <header>
             <h1 class="title"><a href="./index.html">Eva Frankovic</a></h1>
@@ -86,13 +87,7 @@
             </div>
         </div>
     </section>
-    <div id="modal" class="modal">
-        <div class="modal-content">
-          <span class="close-button">&times;</span>
-          <h2 id="modal-title"></h2> <!-- Added ID for modal title -->
-          <p id="modal-description"></p> <!-- Added ID for modal description -->
-        </div>
-      </div>
+    </main>
 
     <footer>
         <div class="footer-left">
@@ -102,8 +97,5 @@
         </div>
         <p>Est. 2025</p>
     </footer>
-
-<script src="./js/modal.js"></script>
-
 </body>
 </html>
