--- a/about.html
+++ b/about.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Instrument+Serif:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <!-- END FONTS-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eva Frankovic</title>
@@ -22,17 +27,24 @@
         </header>
     </section>
 
-    <section class="about">
-        <h1 class="about-intro"> About</h1>
-        <h4 class="about-subtitle"> Hello, my name is Eva.</h4>
-        <p> I am a recent 2024 graduate from Bucknell University with a degree in Computer Science. While at Bucknell, I competed on the university’s Division I varsity women’s soccer team! Before Bucknell, I studied Information Science at the University of Pittsburgh, my hometown school. While studying at Pitt and playing for the school’s soccer team, I made the decision to transfer to Bucknell in order to make a greater impact. </p>
-        <p> I am currently working as a Data Analyst at Kenvue, where I’ve rediscovered my passion for web design and development. I’m now seeking a career in web development to continue pursuing this passion and grow as a developer. Having taken several web design and development classes in college, I’m now diving deeper by completing additional courses through Codecademy and Coursera. </p>
-        <p>I hope you enjoyed exploring my portfolio! Please feel free to reach out if you’d like a copy of my resume. </p>
-        <button> <a href="./contact.html"> </a> Contact Me </button>
-    </section>
+    <section class="about-container">
+        <div class="about-text">
+            <h1 class="page-title-about"> About</h1>
+            <h4 class="submessage-about"> Hello, my name is Eva. </h4>
+                <div class = "story">
+                    <p class="past"> I am a recent 2024 graduate from Bucknell University with a degree in Computer Science. While at Bucknell, I competed on the university’s Division I varsity women’s soccer team! Before Bucknell, I studied Information Science at the University of Pittsburgh, my hometown school. While studying at Pitt and playing for the school’s soccer team, I made the decision to transfer to Bucknell in order to make a greater impact. </p>
+                    <p class="future-present"> I am currently working as a Data Analyst at Kenvue, where I’ve rediscovered my passion for web design and development. I’m now seeking a career in web development to continue pursuing this passion and grow as a developer. Having taken several web design and development classes in college, I’m now diving deeper by completing additional courses through Codecademy and Coursera. </p>
+                    <p class="ad">I hope you enjoyed exploring my portfolio! Please feel free to reach out if you’d like a copy of my resume. </p>
+                </div>
+                <div class="contact-column">
+                  <a href="./contact.html" class="contact-submit-about">Contact Me</a>
+                </div>
 
-    <section class="me">
-        <img src="./images/eva-photo.jpg" alt="Photo of Eva Frankovic">
+        </div>
+
+        <div class="me">
+            <img src="./images/eva-photo.jpg" alt="Photo of Eva Frankovic">
+        </div>
     </section>
 
     <section class="skills">
