--- a/contact.html
+++ b/contact.html
@@ -5,30 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eva Frankovic</title>
     <link rel="stylesheet" href="./css/style.css">
-    <style>
-        .form-row {
-            display: flex;
-            gap: 20px;
-            margin-bottom: 20px;
-        }
-
-        .half-width {
-            flex: 1;
-        }
-
-        .contact-form label {
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        .contact-form input,
-        .contact-form textarea {
-            width: 100%;
-            padding: 8px;
-            box-sizing: border-box;
-            margin-bottom: 20px;
-        }
-    </style>
 </head>
 <body>
     <main>
@@ -53,7 +29,7 @@
     <section class="contact-me-teaser">
         <div>
             <h2 class="contact-me-message">Let's work <span class="diff-font">together</span></h2>
-            <h3 class="contact-me-submes"> Please fill out the form below, and I will get back to you shortly.</h3>
+            <h3 class="submessage"> Please fill out the form below, and I will get back to you shortly.</h3>
         </div>
     </section>
 
